# similarity

./: .gitignore  CLAUDE.md  README.md  REPORT.md  REPORT_EXTENDED.md  pyproject.toml  requirements.txt  run.sh  run_all_cs.sh  run_all_m13h.sh  run_circuit_map_fix.sh  run_data_gen.sh  run_experiments.sh  run_extended.sh  run_extended_cs.sh  run_weight_map.sh  test_slurm.sh
.claude/: .nfsf8bc03c52c33d7ca00002df6  settings.local.json
circuits/: __init__.py  attention.py  circuit_map.py  config.py  cross_model.py  data.py  dla.py  edge_patching.py  geometry.py  knockout.py  logit_lens.py  metrics.py  model.py  neurons.py  patching.py  pca.py  plotting.py  repe.py  steering.py  viz3d.py  wanda.py
notebooks/: understanding_circuits.ipynb
results/: AUDIT.txt  cross_model_gemma-2b_bloom-3b.json
results/figures/: viz_circuit_flow.html  viz_circuit_graph_3d.html  (+5 more)
scripts/: 01_create_dataset.py  02_activation_patching.py  03_direct_logit_attribution.py  04_neuron_analysis.py  05_pca_directions.py  06_activation_steering.py  07_plot_results.py  audit_results.py  build_flow_viz.py  explore_weights.py  orchestrator.py  plot_honest.py  plot_methodology.py  plot_repe.py  plot_weight_findings.py  sanity_check_L0.py  utils.py
tests/: conftest.py  test_attention.py  test_circuit_map.py  test_config.py  test_cross_model.py  test_data.py  test_edge_patching.py  test_geometry.py  test_hooks.py  test_knockout.py  test_logit_lens.py  test_metrics.py  test_model.py  test_patching.py  test_pca.py  test_plotting.py  test_repe.py  test_steering.py  test_viz3d.py  test_wanda.py
(+4 files in other folders)
