[project]
name = "circuits"
version = "0.1.0"
description = "Replication of 'On the Similarity of Circuits across Languages' (Ferrando & Costa-jussà, EMNLP 2024)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformer-lens>=1.17.0",
    "transformers>=4.40.0,<5.0.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0",
    "fancy-einsum>=0.0.3",
    "jaxtyping>=0.2.28",
]

[dependency-groups]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
